RISC-V: Code cleanup for native call

XMLWordPrintable

    • b07
    • riscv
    • linux

        Hi, please consider this code cleanup change for native call.
        This removes the address parameter for NativeCall::reloc_destination and NativeFarCall::reloc_destination.
        This also removes several unnecessary code blob related runtime checks turning them into assertions.

              Assignee:
              Dingli Zhang
              Reporter:
              Dingli Zhang
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: