8361449: RISC-V: Code cleanup for native call